[DOC] Change some comments

--- a/timeseries/jupyter/Crawling & Store toolbox.ipynb
+++ b/timeseries/jupyter/Crawling & Store toolbox.ipynb
@@ -404,9 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can use timeseries/docker-influxdb-grafana.bash to create a Docker instance of InfluxDB & Grafana\n",
-    "# Also need to create the database using bash and influx\n",
-    "# For more cmd, read the timeseries/README.md\n",
+    "# Also need to create the database 'dbname' using bash and influx\n",
+    "# Use the Docker instance of InfluxDB & Grafana at : https://github.com/frtu/governance-toolbox/tree/master/timeseries\n",
     "storeInflux('dbname', dataframe)\n",
     "#or\n",
     "storeInflux('dbname', dataframe, tags=tag_value)"
