--- a/timeseries/jupyter/crawling-n-store-toolbox.ipynb
+++ b/timeseries/jupyter/crawling-n-store-toolbox.ipynb
@@ -9,16 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot Inline\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -59,8 +49,18 @@
     }
    ],
    "source": [
-    "# install influxdb the FIRST TIME\n",
-    "!conda install -c mcrot influxdb"
+    "# Uncomment to INSTALL influxdb the FIRST TIME\n",
+    "#!conda install -c mcrot influxdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Inline\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -85,6 +85,9 @@
    "source": [
     "import json\n",
     "import requests\n",
+    "\n",
+    "def getJsonUsingParams(url_template, **kwargs):\n",
+    "    return getJson(url_template.format(kwargs))\n",
     "\n",
     "def getJson(url):\n",
     "    # Fetch the URL & get JSON data\n",
@@ -207,8 +210,9 @@
     }
    ],
    "source": [
-    "jsonData = getJson('https://raw.githubusercontent.com/Freeboard/freeboard/master/examples/weather.json')\n",
-    "jsonData"
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
+    "#jsonData = getJson('https://raw.githubusercontent.com/Freeboard/freeboard/master/examples/weather.json')\n",
+    "#jsonData"
    ]
   },
   {
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,12 +242,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storeData('serie.json', jsonData)"
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
+    "# storeData('serie.json', jsonData)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +367,9 @@
     }
    ],
    "source": [
-    "jsonData = readData('serie.json')\n",
-    "jsonData"
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
+    "#jsonData = readData('serie.json')\n",
+    "#jsonData"
    ]
   },
   {
@@ -375,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# http://influxdb-python.readthedocs.io/en/latest/examples.html#tutorials-pandas\n",
     "from influxdb import DataFrameClient\n",
     "\n",
-    "def storeInflux(dbname, df, host='localhost', port=8086, **kwargs):\n",
+    "def storeInflux(db_name, table_name, df, host='localhost', port=8086, **kwargs):\n",
     "    \"\"\"Instantiate the connection to the InfluxDB client.\"\"\"\n",
     "    user = 'root'\n",
     "    password = 'root'\n",
@@ -390,10 +396,10 @@
     "    # Temporarily avoid line protocol time conversion issues #412, #426, #431.\n",
     "    protocol = 'json'\n",
     "\n",
-    "    client = DataFrameClient(host, port, user, password, dbname)\n",
+    "    client = DataFrameClient(host, port, user, password, db_name)\n",
     "\n",
-    "    print(\"Write DataFrame:{}\".format(kwargs['cluster']))\n",
-    "    client.write_points(df, dbname, kwargs, protocol=protocol)\n",
+    "    #print(\"Write DataFrame:{}\".format(kwargs['cluster']))\n",
+    "    client.write_points(df, table_name, kwargs, protocol=protocol)\n",
     "\n",
     "    print(\"DONE!\")"
    ]
@@ -404,11 +410,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
     "# Also need to create the database 'dbname' using bash and influx\n",
     "# Use the Docker instance of InfluxDB & Grafana at : https://github.com/frtu/governance-toolbox/tree/master/timeseries\n",
-    "storeInflux('dbname', dataframe)\n",
+    "#storeInflux('dbname', dataframe)\n",
     "#or\n",
-    "storeInflux('dbname', dataframe, tags=tag_value)"
+    "#storeInflux('dbname', dataframe, tags=tag_value)"
    ]
   },
   {
@@ -420,10 +427,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pandas.io.json import json_normalize\n",
+    "\n",
+    "def fetchTimeSerie(url_template, json_data_tag='json_tag_containing_data', value_column_name='value', **kwargs):\n",
+    "    url = url_template.format(**kwargs)\n",
+    "    json = getJson(url)\n",
+    "\n",
+    "    # https://pandas.pydata.org/pandas-docs/stable/generated/pandas.io.json.json_normalize.html\n",
+    "    df = json_normalize(json, json_value_tag)\n",
+    "\n",
+    "    # Move timestamp to index\n",
+    "    # Delete the original timestamp column\n",
+    "    df.index = parseTime(df[0])\n",
+    "    df = df.drop(df.columns[[0]], axis=1)    \n",
+    "\n",
+    "    df.columns = [value_column_name]\n",
+    "    return df\n",
+    "\n",
     "def parseTime(timeColumn, timeunit='s', timezone='US/Pacific'):\n",
     "    \"\"\"Parse a column from a DataFrame : From epoch time to DatetimeIndex\"\"\"\n",
     "    timeserie = pd.to_datetime(timeColumn.tolist(), unit=timeunit)\n",
@@ -435,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -509,19 +533,22 @@
        "  '2018/07/16-00:00:00.000Z'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "buildTimeRange('2018-04-01', 2, 'MS'), buildTimeRange('2018-04-01', 2, 'D'), buildTimeRange('2018-07-01', 30, '12H')"
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
+    "#buildTimeRange('2018-04-01', 2, 'MS'), buildTimeRange('2018-04-01', 2, 'D'), buildTimeRange('2018-07-01', 30, '12H')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -535,11 +562,12 @@
     }
    ],
    "source": [
+    "# TESTING : To run DEMO, look at Notebook => crawling-n-store-toolbox-demo.ipynb\n",
     "# Create time batches\n",
-    "time_range = buildTimeRange('2018-07-01', 4, '12H')\n",
-    "for i in range(len(time_range)):\n",
-    "    if i != 0:\n",
-    "        print(time_range[i-1], '=>', time_range[i])"
+    "#time_range = buildTimeRange('2018-07-01', 4, '12H')\n",
+    "#for i in range(len(time_range)):\n",
+    "#    if i != 0:\n",
+    "#        print(time_range[i-1], '=>', time_range[i])"
    ]
   },
   {
